# lessTokens-sdk-python

./: .gitignore  .rulebook  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  coverage.json  pyproject.toml
docs/: API.md  ARCHITECTURE.md  INTEGRATION.md
examples/: basic_usage.py  multi_turn.py  streaming.py
lesstokens_sdk/: __init__.py  errors.py  sdk.py  types.py
lesstokens_sdk/clients/: __init__.py  less_tokens_client.py  llm_client.py
lesstokens_sdk/providers/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  google.py  openai.py
lesstokens_sdk/utils/: __init__.py  retry.py  validation.py
rulebook/tasks/implement-sdk-complete/: ACHIEVEMENT_SUMMARY.md  COMPLETION_REPORT.md  FINAL_STATUS.md  FINAL_SUCCESS.md  PROGRESS.md  QA_CHECKLIST.md  QA_PROGRESS.md  STATUS.md  SUCCESS.md  TEST_FIXES.md  proposal.md  tasks.md  verification.md
rulebook/tasks/implement-sdk-complete/specs/sdk/: spec.md
scripts/: run_quality_checks.sh
tests/: __init__.py  conftest.py  test_errors.py  test_sdk.py
tests/clients/: __init__.py  test_less_tokens_client.py  test_llm_client.py
tests/integration/: test_sdk_integration.py
tests/providers/: __init__.py  test_anthropic_provider.py  test_deepseek_provider.py  test_factory.py  test_google_provider.py  test_openai_provider.py
tests/utils/: test_retry.py  test_validation.py
